Initial work on adding decades and quarter centuries

--- a/GanttChartExt/GanttChartExt.rc
+++ b/GanttChartExt/GanttChartExt.rc
@@ -393,6 +393,10 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     ID_HELP                 "\nOnline Help"
+    IDS_DISPLAYQUARTERCENTURIES "Quarter Centuries \t(eg. 2000-2024)"
+    IDS_DISPLAYDECADES      "Decades \t\t\t(eg, 2000-2009)"
+    IDS_SNAP_NEARESTQUARTERCENTURY "Nearest Quarter-Century"
+    IDS_SNAP_NEARESTDECADE  "Nearest Decade"
 END
 
 #endif    // English (Australia) resources
