Don't sort snap combo

--- a/GanttChartExt/GanttChartExt.rc
+++ b/GanttChartExt/GanttChartExt.rc
@@ -70,7 +70,7 @@ END
 IDD_GANTTTREE_DIALOG DIALOGEX 0, 0, 594, 316
 STYLE WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CTEXT           "01/01/2001 10:12 AM - 01/01/2001 11:12 PM",
                     IDC_SELECTEDTASKDATES,365,13,222,13,SS_CENTERIMAGE | 
@@ -87,7 +87,7 @@ BEGIN
     CONTROL         "List1",IDC_GANTTLIST,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER | 
                     WS_TABSTOP,162,31,425,278
-    COMBOBOX        IDC_SNAPMODES,159,13,79,161,CBS_DROPDOWNLIST | CBS_SORT | 
+    COMBOBOX        IDC_SNAPMODES,159,13,79,161,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Snap Mode",IDC_SNAPMODES_LABEL,159,2,79,8
     LTEXT           "Selected Task Date Range",IDC_SELECTEDTASKDATES_LABEL,
