--- a/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
+++ b/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
@@ -51,7 +51,7 @@
     <Compile Include="DayViewMonthComboBox.cs" />
     <Compile Include="DayViewWeekLabel.cs" />
     <Compile Include="DayViewYearComboBox.cs" />
-    <Compile Include="TDLRenderer.cs" />
+    <Compile Include="TDLDayView.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -59,6 +59,9 @@
     </Compile>
     <Compile Include="DayViewUIExtensionCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDLRenderer.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
