--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj
@@ -57,7 +57,9 @@
 copy $(TargetPath) "$(SolutionDir)$(ConfigurationName)\"
 mkdir "$(SolutionDir)..\ToDoList_Dev\ToDoList"
 mkdir "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)"
-copy $(TargetPath) "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"</Command>
+copy $(TargetPath) "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"
+copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -80,7 +82,9 @@ copy $(TargetPath) "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(Configurati
 copy $(TargetPath) "$(SolutionDir)$(ConfigurationName)\"
 mkdir "$(SolutionDir)..\ToDoList_Dev\ToDoList"
 mkdir "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)"
-copy $(TargetPath) "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"</Command>
+copy $(TargetPath) "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"
+copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\ToDoList_Dev\ToDoList\unicode_$(ConfigurationName)\"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
