Add Gantt support for hours

--- a/GanttChartExt/GanttChartExt.rc
+++ b/GanttChartExt/GanttChartExt.rc
@@ -352,6 +352,7 @@ BEGIN
     IDS_SNAP_NEARESTQUARTER "Nearest Quarter"
     IDS_SNAP_NEARESTWEEK    "Nearest Week"
     IDS_SNAP_NEARESTYEAR    "Nearest Year"
+    IDS_DISPLAYDAYSHOURS    "Hours"
 END
 
 STRINGTABLE DISCARDABLE 
