Add half-hour snapping. Support dragging beyond the last column

--- a/GanttChartExt/GanttChartExt.rc
+++ b/GanttChartExt/GanttChartExt.rc
@@ -401,6 +401,7 @@ BEGIN
     IDS_DISPLAYDECADES      "Decades \t\t\t(eg, 2000-2009)"
     IDS_SNAP_NEARESTQUARTERCENTURY "Nearest Quarter-Century"
     IDS_SNAP_NEARESTDECADE  "Nearest Decade"
+    IDS_SNAP_NEARESTHALFHOUR "Nearest Half-Hour"
 END
 
 #endif    // English (Australia) resources
