--- a/TransText/TransText.vcxproj
+++ b/TransText/TransText.vcxproj
@@ -105,6 +105,8 @@
       <Command>mkdir ..\ToDoList
 mkdir ..\ToDoList\unicode_Release
 copy unicode_release\transtext.dll ..\todolist\unicode_release /y
+copy unicode_release\transtext.dll ..\..\todolist_Plugins\release /y
+copy unicode_release\transtext.pdb ..\..\todolist_Plugins\release /y
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -159,6 +161,9 @@ copy unicode_release\transtext.dll ..\todolist\unicode_release /y
       <Command>mkdir ..\ToDoList
 mkdir ..\ToDoList\unicode_debug
 copy unicode_debug\transtext.dll ..\todolist\unicode_debug /y
+copy unicode_debug\transtext.dll ..\..\todolist_Plugins\debug /y
+copy unicode_debug\transtext.pdb ..\..\todolist_Plugins\debug /y
+
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
