Make app title copyable

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1892,7 +1892,6 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,206,318,1
     ICON            IDR_MAINFRAME_STD,IDC_STATIC,7,8,21,20
     ICON            IDI_ABSTRACTSPOON,IDC_STATIC,304,7,21,20
-    LTEXT           "Static",IDC_TITLE,34,7,266,8
     LTEXT           "Static",IDC_LICENSE,71,161,254,8
     LTEXT           "A simple and effective way to keep on top of your daily tasks",
                     IDC_STATIC,34,20,267,8
@@ -1904,6 +1903,8 @@ BEGIN
     EDITTEXT        IDC_APPFOLDER,71,174,254,12,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_PREFSFILE,71,189,254,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "License:",IDC_STATIC,7,161,27,8
+    EDITTEXT        IDC_TITLE,34,7,173,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "(c) Abstractspoon 2003-17",IDC_STATIC,213,7,87,8
 END
 
 IDD_SHOWREMINDER_DIALOG DIALOG DISCARDABLE  0, 0, 337, 231
