'Duration' custom attribute -> 'Time Period'

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -5100,7 +5100,7 @@ BEGIN
     IDS_TDCTIP_LOCK         "Locked"
     IDS_UNLOCKED            "Unlocked"
     IDS_LOCKED              "Locked"
-    IDS_CAD_DURATION        "Duration"
+    IDS_CAD_TIMEPERIOD      "Time Period"
     IDS_CUSTOM_FEATURE_FILTER "Filter"
 END
 
