--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -619,6 +619,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TaskSelectionDlg.h" />
     <ClInclude Include="TaskTimeLog.h" />
     <ClInclude Include="TDCAnonymizeTasklist.h" />
+    <ClInclude Include="tdccustomattribdata.h" />
     <ClInclude Include="TDCCustomAttributeHelper.h" />
     <ClInclude Include="tdcenum.h" />
     <ClInclude Include="TDCEnumContainers.h" />
