--- a/ToDoList/ToDoList.vcxproj.filters
+++ b/ToDoList/ToDoList.vcxproj.filters
@@ -807,6 +807,9 @@
     <ClInclude Include="ToDoCtrlDataUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tdccustomattribdata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\abstractspoon.ico">
