--- a/GanttChartExt/GanttChartExt.vcxproj
+++ b/GanttChartExt/GanttChartExt.vcxproj
@@ -202,6 +202,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
     <None Include="res\icon1.ico" />
     <None Include="res\toolbar.bmp" />
     <None Include="res\toolbar_std.bmp" />
+    <None Include="res\XPcheckboxes.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GanttChartExt.rc">
