--- a/GanttChartExt/GanttChartExt.vcxproj.filters
+++ b/GanttChartExt/GanttChartExt.vcxproj.filters
@@ -59,6 +59,9 @@
     <None Include="res\help_button.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\XPcheckboxes.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GanttChartExt.rc">
