--- a/BurndownExt/BurndownExt.rc
+++ b/BurndownExt/BurndownExt.rc
@@ -201,6 +201,8 @@ BEGIN
     IDS_BURNDOWN_TITLE      "Burndown"
     IDS_TIME_AXIS           "Time"
     IDS_TASK_AXIS           "Incomplete Tasks"
+    IDS_DISPLAY_BURNDOWN    "Burndown"
+    IDS_DISPLAY_SPRINT      "Sprint"
 END
 
 #endif    // English (Australia) resources
