--- a/3rdParty/3rdParty.vcxproj
+++ b/3rdParty/3rdParty.vcxproj
@@ -123,6 +123,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="ColorDef.cpp" />
     <ClCompile Include="ColourPicker.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -259,6 +260,7 @@
     <ClInclude Include="Base64Coder.h" />
     <ClInclude Include="CalendarCtrl.h" />
     <ClInclude Include="ClipboardBackup.h" />
+    <ClInclude Include="ColorDef.h" />
     <ClInclude Include="ColourPicker.h" />
     <ClInclude Include="ColourPopup.h" />
     <ClInclude Include="Compression.h" />
