Add 'Dismiss' button to 'Set Reminde' dialog

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1297,31 +1297,26 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Set Task Reminder"
 FONT 8, "Tahoma"
 BEGIN
-    GROUPBOX        "",IDC_STATIC,7,31,206,56
-    GROUPBOX        "",IDC_STATIC,7,91,206,55
-    CONTROL         "&At this date and time",IDC_ABSOLUTE,"Button",
-                    BS_AUTORADIOBUTTON | WS_GROUP,10,31,105,10
-    CONTROL         "&Relative to due/start date",IDC_RELATIVE,"Button",
-                    BS_AUTORADIOBUTTON,10,91,160,10
-    LTEXT           "&Date",IDC_STATIC,17,51,85,8
-    CONTROL         "DateTimePicker1",IDC_ABSOLUTEDATE,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,107,48,97,15
-    LTEXT           "&Time",IDC_STATIC,17,67,87,8
-    COMBOBOX        IDC_ABSOLUTETIME,107,66,97,30,CBS_DROPDOWN | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "R&emind me ",IDC_STATIC,17,110,84,8
-    COMBOBOX        IDC_RELATIVELEADIN,107,109,97,30,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Before this task",IDC_STATIC,17,126,84,8
-    COMBOBOX        IDC_RELATIVEFROMWHERE,107,125,97,30,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,109,196,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,163,196,50,14
-    LTEXT           "&Play this sound",IDC_STATIC,7,152,206,8
-    EDITTEXT        IDC_PLAYSOUND,7,163,206,14,ES_AUTOHSCROLL
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,8,186,204,1
+    GROUPBOX        "",IDC_STATIC,7,31,221,52
+    GROUPBOX        "",IDC_STATIC,7,91,221,52
+    CONTROL         "&At this date and time",IDC_ABSOLUTE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,10,31,105,10
+    CONTROL         "&Relative to due/start date",IDC_RELATIVE,"Button",BS_AUTORADIOBUTTON,10,91,160,10
+    LTEXT           "&Date",IDC_STATIC,17,48,85,8
+    CONTROL         "DateTimePicker1",IDC_ABSOLUTEDATE,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,17,60,97,13
+    LTEXT           "&Time",IDC_STATIC,122,48,87,8
+    COMBOBOX        IDC_ABSOLUTETIME,122,60,97,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "R&emind me ",IDC_STATIC,17,108,84,8
+    COMBOBOX        IDC_RELATIVELEADIN,17,120,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "&Before this task",IDC_STATIC,122,108,84,8
+    COMBOBOX        IDC_RELATIVEFROMWHERE,122,120,97,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,122,195,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,178,195,50,14
+    LTEXT           "&Play this sound",IDC_STATIC,7,151,221,8
+    EDITTEXT        IDC_PLAYSOUND,7,163,221,14,ES_AUTOHSCROLL
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,8,186,220,1
     LTEXT           "Task:",IDC_STATIC,7,7,38,8
-    LTEXT           "something\nelse",IDC_TASKTITLE,59,7,154,20
+    LTEXT           "something\nelsey",IDC_TASKTITLE,47,7,181,19
+    PUSHBUTTON      "&Dismiss",IDC_DISMISS,26,195,50,14
 END
 
 IDD_REUSERECURRINGTASK_DIALOG DIALOG DISCARDABLE  0, 0, 186, 98
@@ -3795,7 +3790,7 @@ BEGIN
     IDD_SETREMINDER_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 213
+        RIGHTMARGIN, 250
         TOPMARGIN, 7
         BOTTOMMARGIN, 210
     END
