Change menu item text to suit context

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -5101,6 +5101,8 @@ BEGIN
     IDS_LOCKED              "Locked"
     IDS_CAD_TIMEPERIOD      "Time Period"
     IDS_CUSTOM_FEATURE_FILTER "Filter"
+    IDS_SETREMINDER         "Set &Reminder..."
+    IDS_MODIFYREMINDER      "&Modify Reminder..."
 END
 
 #endif    // English (Australia) resources
